# ansible-role-apt-cacher-ng

./: .ansible-lint  .gitignore  LICENSE  README.md  pyproject.toml
defaults/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
tasks/: avahi.yml  firewall.yml  main.yml
templates/: avahi-apt-cacher-ng.service.j2  zz-ansible.conf.j2
tests/: inventory.example  playbook.yml
